fix bug in table

--- a/Content/AI.tex
+++ b/Content/AI.tex
@@ -1,4 +1,4 @@
-Trong quá trình xây dựng bài tập lớn, nhóm có sử dụng các công cụ AI tạo sinh 
+Trong quá trình làm bài tập lớn, nhóm có sử dụng các công cụ AI tạo sinh 
 (Generative AI) nhằm hỗ trợ phân tích yêu cầu, phát hiện lỗi trong thiết kế và đề xuất 
 giải pháp kỹ thuật.
 
@@ -18,8 +18,6 @@ thực hoá.
 
 Trong giai đoạn triển khai mã nguồn, AI được sử dụng ở mức độ tham khảo, chủ yếu để 
 xem ví dụ về cấu trúc REST Controller trong Spring Boot, cách viết tầng Service theo 
-chuẩn DI (Dependency Injection), hoặc mẫu component và hook trong React. Những đoạn 
-mã mẫu do AI cung cấp chỉ mang tính định hướng, nhóm hoàn toàn tự triển khai lại 
-theo phong cách lập trình và cấu trúc dự án của riêng mình. Đồng thời, AI còn giúp nhóm 
-phát hiện một số lỗi tiềm ẩn trong logic nghiệp vụ, ví dụ các trường hợp chưa xử lý 
-exception, chưa kiểm tra trạng thái dữ liệu hoặc thiếu validate ở một số API.
+chuẩn DI (Dependency Injection), mẫu component và hook trong React. Những đoạn 
+mã mẫu do AI cung cấp chỉ mang tính định hướng, nhóm sẽ triển khai lại 
+theo phong cách lập trình và cấu trúc dự án của riêng mình.
