--- a/Content/hoatdong.tex
+++ b/Content/hoatdong.tex
@@ -74,6 +74,29 @@
     \label{fig:placeholder}
 \end{figure}
 
+
+
+\begin{figure} [H]
+    \centering
+    \includegraphics[width=1\linewidth]{Image/ui_feedback1.jpg}
+    \caption{Phản hồi}
+    \label{fig:placeholder}
+\end{figure}
+
+\begin{figure} [H]
+    \centering
+    \includegraphics[width=1\linewidth]{Image/ui_feedback.jpg}
+    \caption{Phản hồi}
+    \label{fig:placeholder}
+\end{figure}
+
+\begin{figure} [H]
+    \centering
+    \includegraphics[width=1\linewidth]{Image/ui_feedback.3jpg.jpg}
+    \caption{Phản hồi}
+    \label{fig:placeholder}
+\end{figure}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Tutor}
 \begin{figure} [H]
