thêm change log và sửa xử lý lịch hẹn

--- a/Content/uc_Tutor.tex
+++ b/Content/uc_Tutor.tex
@@ -329,9 +329,10 @@ Tutor bấm vào nút ``Xử lý yêu cầu đặt lịch hẹn''. \\ \hline
 
 \textbf{Normal Flow} & 
 \begin{enumerate}
-    \item Tutor truy cập mục ``Quản lý yêu cầu lịch hẹn''.
+    \item Tutor truy cập mục ``Xử lý yêu cầu lịch hẹn''.
     \item Hệ thống hiển thị danh sách các yêu cầu lịch hẹn đang chờ xử lý.
     \item Tutor chọn một yêu cầu cụ thể để xem chi tiết (thông tin sinh viên, thời gian, nội dung).
+    \item Hệ thống hiển thị chi tiết thông tin yêu cầu.
     \item Tutor chọn ``Phê duyệt'' yêu cầu.
     \item Hệ thống ghi nhận quyết định của Tutor.
     \item Hệ thống cập nhật trạng thái slot của Tutor thành bận, không cho sinh viên khác đăng ký và gửi thông báo kết quả xử lý cho sinh viên.
