--- a/main.tex
+++ b/main.tex
@@ -457,6 +457,22 @@ Xem rõ hơn \href{https://drive.google.com/file/d/1OBO3KzPEBzUu60808emp18U4jJLK
 
 \subsection{Về việc sử dụng AI}
 
+
+\section{Change log}
+\section{Nhật ký thay đổi (Change Log)}
+
+\begin{itemize}
+    \item Cập nhật mô tả các use case cho phù hợp hơn với chức năng thực tế của hệ thống, đồng bộ với yêu cầu nghiệp vụ sau khi rà soát lại.
+    
+    \item Vẽ lại Use Case Diagram nhằm thể hiện đầy đủ các actor, luồng tương tác và phạm vi chức năng của hệ thống sau khi đã hoàn thiện phân tích yêu cầu.
+    
+    \item Điều chỉnh Class Diagram theo kiến trúc MVC với 5 lớp (View, Controller, Service, Repository, Entity), thay đổi mô tả các phương thức trong Class Diagram cho khớp với phần hiện thực hoá bằng Spring Boot.
+    
+    \item Cập nhật lại Sequence Diagram để thể hiện đúng luồng xử lý từ giao diện React đến API Spring Boot.
+    
+\end{itemize}
+
+
 \input{Content/AI.tex}
 
 
