--- a/Content/diagram_xulylichhen.tex
+++ b/Content/diagram_xulylichhen.tex
@@ -1,6 +1,6 @@
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1.1\textwidth]{Image/seq_xulilichhen.png}
+    \includegraphics[width=1.1\textwidth]{Image/xuli.png}
     \caption{Sequence Diagram cho Use Case “Xử lý lịch hẹn”}
 \end{figure}
 
