chỉnh sửa UI luồng hoạt động 4.2

--- a/Content/hoatdong.tex
+++ b/Content/hoatdong.tex
@@ -13,7 +13,7 @@
     \label{fig:placeholder}
 \end{figure}
 
-\subsection{Student}
+\subsubsection{Student}
 
 \begin{figure} [H]
     \centering
@@ -47,8 +47,22 @@
 
 \begin{figure} [H]
     \centering
-    \includegraphics[width=1\linewidth]{Image/ui_buoigapmatstudent.png}
+    \includegraphics[width=1\linewidth]{Image/ui_student_danhsach.png}
     \caption{Danh sách buổi gặp mặt}
+    \label{fig:placeholder}
+\end{figure}
+
+\begin{figure} [H]
+    \centering
+    \includegraphics[width=1\linewidth]{Image/ui_student_huydk.png}
+    \caption{Hủy buổi gặp mặt}
+    \label{fig:placeholder}
+\end{figure}
+
+\begin{figure} [H]
+    \centering
+    \includegraphics[width=1\linewidth]{Image/ui_student_xacnhanhuy.png}
+    \caption{Xác nhận hủy buổi gặp mặt}
     \label{fig:placeholder}
 \end{figure}
 
@@ -98,7 +112,7 @@
 \end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Tutor}
+\subsubsection{Tutor}
 \begin{figure} [H]
     \centering
     \includegraphics[width=1\linewidth]{Image/ui_trangchututor.png}
@@ -136,7 +150,7 @@
 
 \begin{figure} [H]
     \centering
-    \includegraphics[width=1\linewidth]{Image/ui_xulitutor1.png}
+    \includegraphics[width=1\linewidth]{Image/ui_tutor_xuly.png}
     \caption{Xử lý yêu cầu đặt lịch hẹn - Danh sách lịch hẹn}
     \label{fig:placeholder}
 \end{figure}
@@ -144,13 +158,19 @@
 
 \begin{figure} [H]
     \centering
-    \includegraphics[width=1\linewidth]{Image/ui_xulitutor2.png}
-    \caption{Xử lý yêu cầu đặt lịch hẹn - Phê duyệt}
+    \includegraphics[width=1\linewidth]{Image/ui_tutor_chitiet.png}
+    \caption{Xử lý yêu cầu đặt lịch hẹn - Thông tin chi tiết}
+    \label{fig:placeholder}
+\end{figure}
+
+\begin{figure} [H]
+    \centering
+    \includegraphics[width=1\linewidth]{Image/ui_tutor_xacnhan.png}
+    \caption{Xử lý yêu cầu đặt lịch hẹn - Xác nhận từ chối yêu cầu}
     \label{fig:placeholder}
 \end{figure}
 
 
-\subsection{Tutor}
 \begin{figure} [H]
     \centering
     \includegraphics[width=1\linewidth]{Image/ui_hosotutor.png}
